Fixed logo styling on smaller screens in DB

--- a/assets/css/developed-by.css
+++ b/assets/css/developed-by.css
@@ -39,10 +39,6 @@ a:hover {
 }
 
 @media screen and (max-width: 950px) {
-    .imgmap {display:none;}
-}
-
-@media screen and (max-width: 950px) {
     #imgmap {display:none;}
 }
 
@@ -50,4 +46,13 @@ a:hover {
     display: none !important;
 }
 
+@media (max-width: 575.98px) {
+    .dbImg {float:none;}
+}
+
+@media (max-width: 575.98px) {
+    .title {float:none;}
+}
+
 /* Develop by END */
+
